[bdist_wheel]
universal = 1

[metadata]
name = django-querystring-tag
version = attr: querystring_tag.get_version
author = Andy Babic
author_email = andyjbabic@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD-3-Clause
license_file = LICENSE
keywords= django querystring GET parameters pagination filter state-preserving link template tag util
classifiers=
    Environment :: Web Environment
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Framework :: Django
    Framework :: Django :: 2.10
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0

[options]
packages = find:
include_package_data = true
install_requires =
    Django >=2.10
python_requires = >=3.7

[options.extras_require]
lint =
    black ==22.3.0
    isort ==5.9.3
    flake8 ==3.9.2
test =
    pytest-cov ==2.12.1
    pytest-mock ==3.6.1
    pytest-django ==4.4.0
    pytest ==6.2.4

[flake8]
ignore = C901,W503
max-line-length = 120

[isort]
known_first_party=querystring_tag
profile=black
skip=migrations,node_modules,venv
sections=STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
default_section=THIRDPARTY
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
